# Memcached-RateLimit

./: .gitignore  Changes  README.md  dist.ini
.github/workflows/: linux.yml
ffi/: .gitignore  Cargo.toml
ffi/src/: lib.rs
lib/Memcached/: RateLimit.pm
maint/: cip-before-install
t/: 00_diag.t  memcached_ratelimit.t
